<resources>
    <string name="app_name">GuessQubicFactor</string>
    <string name="correct_answer">"Correct answer was "</string>
    <string name="highScore">highScore</string>
    <string name="highScoreMsg">NEW HIGHSCORE!!!</string>
    <string name="instruction">What number multiplied by itself three times gives this result?</string>
    <string name="score">Your Score</string>
    <string name="Unknown">\?</string>
    <string name="zero">0</string>
    <string name="full_display">888888</string>
</resources>
