<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dk.brams.android.guessqubicfactor.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Unknown"
        android:inputType="number"
        android:textSize="48sp"
        android:width="60dp"
        android:layout_below="@+id/big_number_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="4"
        android:scaleY="4"
        android:id="@+id/imageGrade"
        android:layout_below="@+id/answer_text"
        android:layout_marginTop="115dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/big_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_display"
        android:textSize="48sp"
        android:layout_marginTop="101dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:text="@string/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:textColor="@color/icons"/>

    <TextView
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/textView2"
        android:textColor="@color/colorPrimaryLight"/>

    <TextView
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:id="@+id/text_score"
        android:textColor="@color/icons"/>

</RelativeLayout>
